# kernel

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  gdbinit  test.c  test.cpp
kernel/: CMakeLists.txt  arith64.cpp  common.h  ctors.cpp  ctors.h  cxxabi.cpp  elf.cpp  elf.h  font.h  io.cpp  io.h  main.cpp  mbr.h  panic.cpp  panic.h  partitions.cpp  partitions.h  pci.cpp  pci.h  random.h  serial.cpp  serial.h  symbols.cpp  symbols.h  vga.cpp  vga.h
kernel/acpi/: acpi.cpp  acpi.h  lai.cpp  lai.h  smbios.cpp  smbios.h  tables.h
kernel/arch/: apic.cpp  apic.h  arch.h  boot_info.h  command_line.cpp  command_line.h  common.inc  cpu.cpp  cpu.h  interrupts.h  io.cpp  io.h  irq.cpp  irq.h  page_directory.h  paging.h  pic.cpp  pic.h  processor.cpp  processor.h  registers.h  tss.h
kernel/arch/x86/: arch.h  common.inc  gdt.cpp  gdt.h  idt.cpp  idt.h  init.cpp  linker.ld  multiboot.cpp  page_directory.cpp  page_directory.h  paging.cpp  paging.h  processor.cpp  registers.cpp  registers.h  tss.h
kernel/arch/x86/asm/: boot.asm  common.inc  gdt.asm  interrupts.asm  syscalls.asm  tasks.asm
kernel/arch/x86_64/: arch.h  common.inc  gdt.cpp  gdt.h  idt.cpp  idt.h  init.cpp  limine.cpp  linker.ld  msr.cpp  msr.h  page_directory.cpp  page_directory.h  processor.cpp  registers.cpp  registers.h  tss.h
kernel/arch/x86_64/asm/: gdt.asm  interrupts.asm  syscalls.asm  tasks.asm
kernel/boot/: boot.asm  boot_info.h  command_line.cpp  command_line.h  common.inc  gdt.asm  interrupts.asm  linker.ld  syscalls.asm  tasks.asm
kernel/cpu/: apic.cpp  apic.h  cpu.cpp  cpu.h  gdt.cpp  gdt.h  idt.cpp  idt.h  pic.cpp  pic.h
kernel/devices/: ac97.cpp  ac97.h  block.cpp  block.h  block_device.cpp  block_device.h  bochs_vga.cpp  bochs_vga.h  character.h  character_device.h  devctl.cpp  devctl.h  device.cpp  device.h  disk.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  null.cpp  null.h  partition.cpp  partition.h  pata.cpp  pata.h  pcspeaker.cpp  pcspeaker.h  zero.cpp  zero.h
kernel/devices/audio/: ac97.cpp  ac97.h  device.cpp  device.h  manager.cpp  manager.h  pcspeaker.cpp  pcspeaker.h
kernel/devices/audio/ac97/: device.cpp  device.h
kernel/devices/gpu/: connector.h  device.cpp  device.h  edid.h  manager.cpp  manager.h
kernel/devices/gpu/bochs/: bochs.cpp  bochs.h
kernel/devices/gpu/generic/: generic.cpp  generic.h
kernel/devices/gpu/virtio/: connector.cpp  connector.h  device.cpp  device.h  virtio.h
kernel/devices/input/: device.h  keyboard.cpp  keyboard.h  manager.cpp  manager.h  mouse.cpp  mouse.h
kernel/devices/input/ps2/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
kernel/devices/storage/: ata.h  controller.h  device.cpp  device.h  manager.cpp  manager.h  partition.cpp  partition.h  partitions.cpp  partitions.h
kernel/devices/storage/ahci/: ahci.h  controller.cpp  controller.h  ports.cpp  ports.h  sata.cpp  sata.h
kernel/devices/storage/ide/: pata.cpp  (+3 more)
kernel/devices/video/: bochs.cpp  bochs.h  generic.cpp  generic.h
kernel/efi/: CMakeLists.txt  crt0.cpp  elf_x86_64_efi.ld  init.cpp  uefi.h
kernel/fs/: fd.cpp  fd.h  file.cpp  file.h  filesystem.cpp  filesystem.h  inode.cpp  inode.h  ptsfs.cpp  ptsfs.h  vfs.cpp  vfs.h
kernel/fs/devfs/: filesystem.cpp  filesystem.h
kernel/fs/ext2fs/: block_group.cpp  block_group.h  ext2.h  file.cpp  file.h  filesystem.cpp  filesystem.h  inode.cpp  inode.h
kernel/fs/ramfs/: file.cpp  file.h  filesystem.cpp  filesystem.h
kernel/loader/: CMakeLists.txt  boot.asm  init.cpp  linker.ld
kernel/memory/: buddy_allocator.cpp  buddy_allocator.h  liballoc.cpp  liballoc.h  manager.cpp  manager.h  mm.cpp  mm.h  paging.cpp  paging.h  physical.cpp  physical.h  physical_address.h  pmm.cpp  pmm.h  region.cpp  region.h  stdlib.h  virtual_address.h
kernel/net/: adapter.cpp  adapter.h  e1000.cpp  e1000.h  ethernet.h  mac.h  manager.cpp  manager.h  network_adapter.cpp  network_manager.cpp  network_manager.h
kernel/net/adapters/: e1000.cpp  e1000.h  loopback.cpp  loopback.h
kernel/net/ip/: arp.h  ipv4.h  tcp.h  udp.h
kernel/pci/: address.cpp  address.h  defs.cpp  defs.h  device.cpp  device.h  pci.cpp  pci.h
kernel/pci/controllers/: controller.cpp  controller.h  mmio.cpp  mmio.h  piix4.cpp  piix4.h
kernel/posix/: errno.h  fcntl.h  time.h  unistd.h
kernel/posix/sys/: ioctl.h  mman.h  stat.h  types.h  wait.h
kernel/process/: blocker.cpp  blocker.h  elf.cpp  elf.h  process.cpp  process.h  scheduler.cpp  scheduler.h  stack.h  syscalls.cpp  syscalls.h  threads.cpp  threads.h
kernel/sync/: lock.h  mutex.cpp  mutex.h  resource.h  spinlock.cpp  spinlock.h
kernel/syscalls/: chdir.cpp  clock.cpp  exec.cpp  exit.cpp  fd.cpp  fork.cpp  mmap.cpp  pid.cpp  syscalls.cpp  syscalls.h  waitpid.cpp
kernel/time/: manager.cpp  manager.h  pit.cpp  pit.h  rtc.cpp  rtc.h  timer.h
kernel/time/hpet/: defs.h  hpet.cpp  hpet.h  timer.cpp  timer.h
kernel/tty/: master.cpp  master.h  multiplexer.cpp  multiplexer.h  slave.cpp  slave.h  tty.cpp  tty.h  virtual.cpp  virtual.h
kernel/usb/: controller.h  descriptor_pool.h  device.cpp  device.h  pipe.cpp  pipe.h  usb.h
kernel/usb/ohci/: controller.cpp  controller.h  ohci.h
kernel/usb/uhci/: controller.cpp  controller.h  uhci.h
kernel/virtio/: device.cpp  device.h  queue.cpp  queue.h  virtio.h
libraries/libc/: CMakeLists.txt  crt0.cpp  cxxabi.cpp  dirent.cpp  dirent.h  dlfcn.cpp  dlfcn.h  errno.cpp  errno.h  fcntl.cpp  fcntl.h  liballoc.cpp  sched.cpp  sched.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  time.cpp  time.h  unistd.cpp  unistd.h
libraries/libc/sys/: cdefs.h  ioctl.cpp  ioctl.h  mman.cpp  mman.h  stat.cpp  stat.h  syscall.h  syscall.hpp  types.h  wait.cpp  wait.h
programs/shell/: CMakeLists.txt  main.cpp  terminal.cpp  terminal.h
userland/coreutils/: CMakeLists.txt  audio_test.cpp  cat.cpp  execve.cpp  ls.cpp  test.cpp  time.cpp
userland/loader/: CMakeLists.txt  dlfcn.cpp  dlfcn.h  linker.ld  loader.cpp  loader.h  main.cpp  object.cpp  object.h
userland/shell/: CMakeLists.txt  commands.cpp  commands.h  main.cpp  terminal.cpp  terminal.h
(+93 files in other folders)
